{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 278,
  "lineage": "580c119b-cf81-7d7c-822f-331de9e798fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "os1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0447a12f28fddb066",
            "arn": "arn:aws:ec2:ap-south-1:684956208517:instance/i-024dc52ec681a884f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024dc52ec681a884f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myterrakey2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-025a58aa36b9e8e96",
            "private_dns": "ip-192-168-0-87.ap-south-1.compute.internal",
            "private_ip": "192.168.0.87",
            "public_ip": "15.206.169.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fff7e18ac92ae5ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03bf92579fa411b99"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09dea2f9f34ca0720",
            "tags": {
              "Name": "os1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bf92579fa411b99"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sec_group",
            "aws_subnet.terra_subnet1a",
            "tls_private_key.myterrakey2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "os2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0447a12f28fddb066",
            "arn": "arn:aws:ec2:ap-south-1:684956208517:instance/i-0444bfe0694e4718e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0444bfe0694e4718e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myterrakey2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0766969bd07f1e1ea",
            "private_dns": "ip-192-168-1-50.ap-south-1.compute.internal",
            "private_ip": "192.168.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-042ce6b9c7e1ffcd0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03bf92579fa411b99"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a166cf3b879ea5c3",
            "tags": {
              "Name": "os2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bf92579fa411b99"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sec_group",
            "aws_subnet.terra_subnet1b",
            "tls_private_key.myterrakey2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:internet-gateway/igw-04f9e4d6eaaa52fca",
            "id": "igw-04f9e4d6eaaa52fca",
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_ig"
            },
            "vpc_id": "vpc-03eb0dc18c7b1a5ca"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e48d7b3052c5f36a",
            "owner_id": "684956208517",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f9e4d6eaaa52fca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_route"
            },
            "vpc_id": "vpc-03eb0dc18c7b1a5ca"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_route_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02850d54fb14c4d66",
            "route_table_id": "rtb-0e48d7b3052c5f36a",
            "subnet_id": "subnet-09dea2f9f34ca0720"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_route_table.terra_route",
            "aws_subnet.terra_subnet1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_route_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0bd574d1d0a7412",
            "route_table_id": "rtb-0e48d7b3052c5f36a",
            "subnet_id": "subnet-0a166cf3b879ea5c3"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_route_table.terra_route",
            "aws_subnet.terra_subnet1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:security-group/sg-03bf92579fa411b99",
            "description": "Allows SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bf92579fa411b99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_group",
            "name_prefix": "",
            "owner_id": "684956208517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03eb0dc18c7b1a5ca"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:subnet/subnet-09dea2f9f34ca0720",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-09dea2f9f34ca0720",
            "map_public_ip_on_launch": true,
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_subnet1a"
            },
            "vpc_id": "vpc-03eb0dc18c7b1a5ca"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:subnet/subnet-0a166cf3b879ea5c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0a166cf3b879ea5c3",
            "map_public_ip_on_launch": false,
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_subnet1b"
            },
            "vpc_id": "vpc-03eb0dc18c7b1a5ca"
          }
        }
      ]
    }
  ]
}